[Chore] API 업데이트 및 prettier적용
