# src/libs/core-api/api/model/index.ts
@@ -10,9 +10,11 @@ export * from './deployment-projection';
 export * from './deployment-status';
 export * from './error-response';
 export * from './file-projection-response';
+export * from './install-plugin-request';
 export * from './login-request';
 export * from './login-result';
 export * from './me-projection';
+export * from './plugin-projection';
 export * from './refresh-token-request';
 export * from './sign-up-request';
 export * from './sketch-response';
