# src/libs/core-api/api/model/install-plugin-request.ts
@@ -12,10 +12,22 @@
  * Do not edit the class manually.
  */
 
-export * from './api/auth-api';
-export * from './api/channel-api';
-export * from './api/deployment-api';
-export * from './api/file-api';
-export * from './api/plugin-api';
-export * from './api/sketch-api';
-export * from './api/users-api';
+/**
+ *
+ * @export
+ * @interface InstallPluginRequest
+ */
+export interface InstallPluginRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof InstallPluginRequest
+   */
+  pluginId: string;
+  /**
+   *
+   * @type {any}
+   * @memberof InstallPluginRequest
+   */
+  pluginConfiguration: any;
+}
