# src/libs/core-api/api/model/plugin-projection.ts
@@ -1,0 +1,45 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BlockInfrastructure-Core
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface PluginProjection
+ */
+export interface PluginProjection {
+  /**
+   *
+   * @type {string}
+   * @memberof PluginProjection
+   */
+  id: string;
+  /**
+   *
+   * @type {string}
+   * @memberof PluginProjection
+   */
+  name: string;
+  /**
+   *
+   * @type {string}
+   * @memberof PluginProjection
+   */
+  description: string;
+  /**
+   *
+   * @type {any}
+   * @memberof PluginProjection
+   */
+  samplePluginConfiguration: any;
+}
